--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,6 +1,3 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Node.js Package
 
 on:
@@ -11,12 +8,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout the repository
       - uses: actions/checkout@v4
+
+      # Step 2: Set up Node.js environment
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
-      - run: npm test
+
+      # Step 3: Install dependencies using yarn (or npm if preferred)
+      - run: yarn install
+
+      # Step 4: Run your build process to compile the package
+      - run: yarn build
+
+      # Step 5: Copy node_modules to the dist directory
+      - run: mkdir -p dist && cp -r node_modules dist/node_modules
+
+      # Step 6: Copy package.json to dist and modify for production use
+      # Using jq to create a lightweight package.json (install jq first)
+      - run: |
+          sudo apt-get install jq
+          cat package.json | jq '{
+            name: .name,
+            version: .version,
+            main: "index.js",
+            dependencies: .dependencies,
+            peerDependencies: .peerDependencies
+          }' > dist/package.json
+
+      # Step 7: Copy the LICENSE and README (optional)
+      - run: cp LICENSE README.md dist/
 
   publish-gpr:
     needs: build
@@ -25,12 +47,16 @@ jobs:
       contents: read
       packages: write
     steps:
+      # Step 1: Checkout the repository again in the publish stage
       - uses: actions/checkout@v4
+
+      # Step 2: Set up Node.js environment
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+
+      # Step 3: Publish the package, but only from the dist folder
+      - run: npm publish --workspace ./dist --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
