--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -57,6 +57,6 @@ jobs:
           registry-url: https://npm.pkg.github.com/
 
       # Step 3: Publish the package, but only from the dist folder using --prefix
-      - run: npm publish --prefix ./dist --access public
+      - run: npm publish --prefix ./dist --access public --registry=https://npm.pkg.github.com/
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
