--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "types": "dist/types/index.d.ts",
+  "repository": "https://github.com/jekuari/jekuari-utils",
   "devDependencies": {
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
