--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "dependencies": {
     "framer-motion": "^11.11.9",
     "react-icons": "^5.3.0"
-  }
+  },
+  "files": [
+    "dist/**/*"
+  ]
 }
