--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@jekuari/utils",
   "version": "1.0.0",
   "description": "Jekuari utils library",
-  "type": "module",
   "main": "dist/index.js",
   "author": "Ricardo Feregrino (Jekuari)",
   "license": "MIT",
@@ -10,6 +9,7 @@
   "types": "dist/types/index.d.ts",
   "repository": "https://github.com/jekuari/jekuari-utils",
   "devDependencies": {
+    "@babel/cli": "^7.25.7",
     "@babel/core": "^7.25.8",
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-react": "^7.25.7",
