--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -18,6 +18,7 @@ jobs:
           registry-url: https://registry.npmjs.org/ 
       - run: yarn install
       - run: yarn build:babel
+      - run: yarn build:tailwind
       - run: yarn build
       - name: Extract version from tag
         run: |
