--- a/package.json
+++ b/package.json
@@ -17,14 +17,23 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "jest": "^29.7.0",
+    "postcss-loader": "^8.1.1",
     "react-testing-library": "^8.0.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.14",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "build": "tsc",
     "build:babel": "babel src --out-dir dist --extensions '.ts,.tsx' --copy-files",
+    "build:tailwind": "tailwindcss build -i src/styles/index.css -o dist/styles/index.css",
     "test": "jest"
   },
   "peerDependencies": {
