--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.14",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3",
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.6.3"
   },
   "scripts": {
     "build": "tsc",
